# my-awesome-agent

./: LICENSE  README.md
my-awesome-agent/: Makefile  README.md  pyproject.toml
my-awesome-agent/app/: server.py
my-awesome-agent/app/utils/: typing.py
my-awesome-agent/deployment/cd/: deploy-to-prod.yaml  staging.yaml
my-awesome-agent/deployment/terraform/: build_triggers.tf  iam.tf  service_accounts.tf  storage.tf  variables.tf
my-awesome-agent/deployment/terraform/dev/: iam.tf  storage.tf  variables.tf
my-awesome-agent/deployment/terraform/dev/vars/: env.tfvars
my-awesome-agent/deployment/terraform/vars/: env.tfvars
my-awesome-agent/my-agent/: Makefile  README.md  pyproject.toml
my-awesome-agent/my-agent/app/: agent_engine_app.py
my-awesome-agent/my-agent/app/utils/: tracing.py  typing.py
my-awesome-agent/my-agent/deployment/cd/: deploy-to-prod.yaml  staging.yaml
my-awesome-agent/my-agent/deployment/ci/: pr_checks.yaml
my-awesome-agent/my-agent/deployment/terraform/: build_triggers.tf  iam.tf  service_accounts.tf  storage.tf  variables.tf
my-awesome-agent/my-agent/deployment/terraform/dev/: iam.tf  storage.tf  variables.tf
my-awesome-agent/my-agent/deployment/terraform/dev/vars/: env.tfvars
my-awesome-agent/my-agent/deployment/terraform/vars/: env.tfvars
